add responsive image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             bottom: 489px;
 
         }
+
+        #themeImg {
+            width: 100%;
+            height: auto
+        }
     </style>
     <title>Shree Ram Sea Swimming Club</title>
 </head>
@@ -27,8 +32,9 @@
     <div class="container">
         <div class="row gx-5">
             <div class="col" id="imgSection" style="height:735px;padding: 0px;">
-                <img src="img2.jpg" alt="image not found" width="650px">
-                <img src="user.png" id="imgshow" width="380px" alt="User Image">
+                <img src="img2.jpg" alt="image not found" id="themeImg" width="600" height="400"
+                    alt="Responsive Image" />
+                <img src="user.png" id="imgshow" width="380px" alt="User Image" />
             </div>
             <div class="col my-5">
                 <input type="file" id="imgload" class="btn btn-warning">
