--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="1;ur;=404.html"/>
+    <meta http-equiv="refresh" content="1;url;=404.html"/>
     <link rel="stylesheet" href="bootStyle.css">
     <link rel="stylesheet" href="media.css">
     <style>
