Revert "make project responsive 3"
This reverts commit 052720ed315de486766df71d23d71db24458620a.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <label for="name" class="form-label">Enter Your Name :</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter your name here" autocomplete="off"
                     maxlength="22" minlength="3">
-                <input type="file" id="imgload" class="form-control my-3">
+                <input type="file" id="imgload" class="btn btn-warning my-3">
                 <button type="button" class="btn btn-warning ms-3 my-3 clickbtn" id="download">Download</button>
             </div>
         </div>
