make project responsive 5

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <!-- main container -->
     <div class="container">
         <div class="row gx-5">
-            <div class="col" id="imgSection"
-                style="height:849px;padding-right: 10px;padding-left: 0px;">
+            <div class="col" id="imgSection" style="height:849px;padding-right: 2px;padding-left: 0px;">
                 <img src="mainPic.png" alt="image not found" id="themeImg" width="600" height="400"
                     alt="Responsive Image" />
                 <img src="user.png" id="imgshow" width="380px" alt="User Image" />
@@ -24,8 +23,7 @@
             </div>
             <div class="col my-5 mb-0" id="inputContainer">
                 <label for="name" class="form-label">Enter Your Name :</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your name here" autocomplete="off"
-                    maxlength="22" minlength="3">
+                <input type="text" class="form-control" id="name" placeholder="Enter your name here" autocomplete="off">
                 <input type="file" id="imgload" class="btn btn-warning my-3">
                 <button type="button" class="btn btn-warning ms-3 my-3 clickbtn" id="download">Download</button>
             </div>
