make project responsice 6

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- main container -->
     <div class="container">
         <div class="row gx-5">
+            <span id="scrollTPage" style="display:hidden;"></span>
             <div class="col" id="imgSection" style="height:849px;padding-right: 2px;padding-left: 0px;">
                 <img src="mainPic.png" alt="image not found" id="themeImg" width="600" height="400"
                     alt="Responsive Image" />
@@ -25,7 +26,8 @@
                 <label for="name" class="form-label">Enter Your Name :</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter your name here" autocomplete="off">
                 <input type="file" id="imgload" class="btn btn-warning my-3">
-                <button type="button" class="btn btn-warning ms-3 my-3 clickbtn" id="download">Download</button>
+                <button type="button" class="btn btn-warning ms-3 my-3 clickbtn" id="download"><a
+                        href="#scrollTPage">Download</a></button>
             </div>
         </div>
     </div>
