--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- main container -->
     <div class="container">
         <div class="row gx-5">
-            <span id="scrollTPage" style="display:hidden;"></span>
+            <h1 id="scrollTPage" class="mb-5"></h1>
             <div class="col" id="imgSection" style="height:849px;padding-right: 2px;padding-left: 0px;">
                 <img src="mainPic.png" alt="image not found" id="themeImg" width="600" height="400"
                     alt="Responsive Image" />
