--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
             </div>
         </div>
     </div>
-
+    <!-- <footer>
+        <div class="container-fluid bg-dark my-5">
+            <footer class="py-3 my-4">
+                <p class="nav justify-content-center border-bottom pb-3 mb-3 text-white">Developed by Mayank
+                </p>
+                <p class="text-center text-white">Contact Us : 9727633838</p>
+            </footer>
+        </div>
+    </footer> -->
     <script src="bootJs.js"></script>
     <script src="jquery.js"></script>
     <script src="logic.js"></script>
