--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="bootStyle.css">
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="style.css">
+    <script src="cropzee.js" defer></script>
     <title>Shree Ram Sea Swimming Club</title>
 </head>
 
@@ -20,26 +22,23 @@
             <div class="col" id="imgSection" style="height:849px;padding-right: 2px;padding-left: 0px;">
                 <img src="mainPic.png" alt="image not found" id="themeImg" width="600" height="400"
                     alt="Responsive Image" />
-                <img src="user.png" id="imgshow" width="380px" alt="User Image" />
+                <img src="user.png" data-cropzee="imgload" id="imgshow" width="380px" alt="User Image" />
                 <span id="userName"></span>
             </div>
             <div class="col my-5 mb-0" id="inputContainer">
                 <label for="name" class="form-label">Enter Your Name :</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter your name here" autocomplete="off">
-                <input type="file" id="imgload" class="btn btn-warning my-3">
-                <!-- <button type="button" class="btn btn-warning ms-3 my-3 clickbtn" id="download">Download</button> -->
+                <input type="file" id="imgload" class="btn btn-warning my-3" accept="image/*">
             </div>
         </div>
     </div>
+    </div>
+
     <script src="bootJs.js"></script>
     <script src="jquery.js"></script>
     <script src="logic.js"></script>
     <script src="logic2.js"></script>
     <script src="logic3.js"></script>
-    <script>
-        $("#name").attr("maxlength", 22);
-        $("#name").attr("minlength", 3);
-    </script>
 </body>
 
 </html>
