--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
         </div>
     </div>
     </div>
-
+    <div class="container-fluid" id="footer" style="background-color: #fecb02;">
+        <footer class="py-3 my-4 mb-0">
+            <ul class="nav justify-content-center">
+                <li class="nav-item text-dark">Developed by <b>Mayank</b> | Contact us : <b><a
+                            href="mailto:mayankkanakiya182003@gmail.com" class="text-dark">Email</a></b></li>
+            </ul>
+        </footer>
+    </div>
     <script src="bootJs.js"></script>
     <script src="jquery.js"></script>
     <script src="logic.js"></script>
