--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             </ul>
         </footer>
     </div>
-    <script src="bootJs.js"></script>
+    <script src="bootJs.js" defer></script>
     <script src="jquery.js"></script>
-    <script src="logic.js"></script>
-    <script src="logic2.js"></script>
-    <script src="logic3.js"></script>
+    <script src="logic.js" defer></script>
+    <script src="logic2.js" defer></script>
+    <script src="logic3.js" defer></script>
 </body>
 
 </html>
