--- a/oldFiles/index.html
+++ b/oldFiles/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="bootStyle.css">
-    <link rel="stylesheet" href="media2.css">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="style.css">
     <script src="cropzee.js" defer></script>
     <title>Shree Ram Sea Swimming Club</title>
 </head>
@@ -18,27 +17,27 @@
     <!-- main container -->
     <div class="container" id="mainContainer">
         <div class="row gx-5">
-            <button type="button" class="btn btn-danger clickbtn my-1 mb-0" disabled="disabled"
+            <button type="button" class="btn btn-warning clickbtn my-1 mb-0" disabled="disabled"
                 id="download">Download</button>
-            <div class="col" id="imgSection" style="height:910px;padding-right: 2px;padding-left:0px;">
-                <img src="mainImg2.jpg" alt="image not found" id="themeImg" width="600" height="400"
+            <div class="col" id="imgSection" style="height:849px;padding-right: 2px;padding-left: 0px;">
+                <img src="mainPic.png" alt="image not found" id="themeImg" width="600" height="400"
                     alt="Responsive Image" />
-                <img src="user2.png" data-cropzee="imgload" id="imgshow" width="380px" alt="User Image" />
+                <img src="user.png" data-cropzee="imgload" id="imgshow" width="380px" alt="User Image" />
                 <span id="userName"></span>
             </div>
             <div class="col my-5 mb-0" id="inputContainer">
                 <label for="name" class="form-label">Enter Your Name :</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter your name here" autocomplete="off">
-                <input type="file" id="imgload" class="btn btn-danger my-3" accept="image/*">
+                <input type="file" id="imgload" class="btn btn-warning my-3" accept="image/*">
             </div>
         </div>
     </div>
     </div>
-    <div class="container-fluid bg-danger" id="footer">
+    <div class="container-fluid" id="footer" style="background-color: #fecb02;">
         <footer class="py-3 my-4 mb-0">
             <ul class="nav justify-content-center">
-                <li class="nav-item text-light">Developed by <b>Mayank</b> | Contact us : <b><a
-                            href="mailto:mayankkanakiya182003@gmail.com" class="text-light">Email</a></b></li>
+                <li class="nav-item text-dark">Developed by <b>Mayank</b> | Contact us : <b><a
+                            href="mailto:mayankkanakiya182003@gmail.com" class="text-dark">Email</a></b></li>
             </ul>
         </footer>
     </div>
